--- a/notebooks/1_format_data.ipynb
+++ b/notebooks/1_format_data.ipynb
@@ -58,10 +58,25 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|                                                                                                                                                                                                                             | 0/6877 [00:00<?, ?it/s]"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Formatting Physionet2020 dataset...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  4%|████████▎                                                                                                                                                                                                        | 273/6877 [04:07<1:53:54,  1.03s/it]"
      ]
     }
    ],
@@ -70,7 +85,7 @@
     "data = FormatDataPhysionet2020(dataset='A')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=False)"
+    "data.format(extract=False, debug=False, p_and_t_waves=False, parallel=False)"
    ]
   },
   {
@@ -84,25 +99,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatting Physionet2020 dataset...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='B')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=False)"
+    "data.format(extract=False, debug=False, p_and_t_waves=False, parallel=False)"
    ]
   },
   {
@@ -124,7 +131,7 @@
     "data = FormatDataPhysionet2020(dataset='C')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=False)"
+    "data.format(extract=False, debug=False, p_and_t_waves=False, parallel=False)"
    ]
   },
   {
@@ -146,7 +153,7 @@
     "data = FormatDataPhysionet2020(dataset='D')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=False)"
+    "data.format(extract=False, debug=False, p_and_t_waves=False, parallel=False)"
    ]
   },
   {
@@ -168,7 +175,7 @@
     "data = FormatDataPhysionet2020(dataset='E')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=False)"
+    "data.format(extract=False, debug=False, p_and_t_waves=False, parallel=False)"
    ]
   },
   {
@@ -190,7 +197,7 @@
     "data = FormatDataPhysionet2020(dataset='F')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=False)"
+    "data.format(extract=False, debug=False, p_and_t_waves=False, parallel=False)"
    ]
   }
  ],
