--- a/notebooks/p_t_wave_detection.ipynb
+++ b/notebooks/p_t_wave_detection.ipynb
@@ -42,12 +42,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib qt"
+    "%matplotlib qt\n",
+    "extract_waves = PTWaveDetection()\n",
+    "resampling = Resampling()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -61,32 +63,188 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start processing...\n"
+      "Start processing...\n",
+      "[ 1. 12. 11. ...  7. -2. -3.]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "  0%|          | 3/5913 [00:00<39:47,  2.48it/s]"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "max() arg is an empty sequence",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-de91adce46f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[0;31m#data = resampling.upsample(data[:,0],2)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m     \u001b[0mtwaves\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpwaves\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_waves\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrpeaks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m     \u001b[0;31m#data_p = extract_waves.run(data[:,0],rpeaks)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/HDD/ECG_physionet/p_t_wave_detection.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, X, rpeaks)\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m             \u001b[0mPR\u001b[0m \u001b[0;34m/=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 64\u001b[0;31m             \u001b[0mRT\u001b[0m \u001b[0;34m/=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     65\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m             \u001b[0mT_wave\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpeakdet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: max() arg is an empty sequence"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1. 12. 11. ...  7. -2. -3.]\n",
+      "[ 1. 12. 11. ...  7. -2. -3.]\n",
+      "[ 1. 12. 11. ...  7. -2. -3.]\n",
+      "[ 1. 12. 11. ...  7. -2. -3.]\n",
+      "[ 1. 12. 11. ...  7. -2. -3.]\n",
+      "[ 1. 12. 11. ...  7. -2. -3.]\n",
+      "[ 1. 12. 11. ...  7. -2. -3.]\n",
+      "[ 1. 12. 11. ...  7. -2. -3.]\n",
+      "[ 1. 12. 11. ...  7. -2. -3.]\n",
+      "[ 1. 12. 11. ...  7. -2. -3.]\n",
+      "[ 1. 12. 11. ...  7. -2. -3.]\n",
+      "[ 1. 12. 11. ...  7. -2. -3.]\n",
+      "[ 1. 12. 11. ...  7. -2. -3.]\n",
+      "[ 1. 12. 11. ...  7. -2. -3.]\n",
+      "[ 1. 12. 11. ...  7. -2. -3.]\n",
+      "[ 1. 12. 11. ...  7. -2. -3.]\n",
+      "[ -4.   4.  24. ... -70. -69. -75.]\n",
+      "[ -4.   4.  24. ... -70. -69. -75.]\n",
+      "[ -4.   4.  24. ... -70. -69. -75.]\n",
+      "[ -4.   4.  24. ... -70. -69. -75.]\n",
+      "[ -4.   4.  24. ... -70. -69. -75.]\n",
+      "[ -4.   4.  24. ... -70. -69. -75.]\n",
+      "[ -4.   4.  24. ... -70. -69. -75.]\n",
+      "[ -4.   4.  24. ... -70. -69. -75.]\n",
+      "[ -4.   4.  24. ... -70. -69. -75.]\n",
+      "[ -4.   4.  24. ... -70. -69. -75.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[117. 164. 147. ...  24.  29.  25.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n",
+      "[-16. -14. -11. ...   6.   5.   4.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 5/5913 [00:00<29:33,  3.33it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[ 78.  83.  86. ... 314. 231. 156.]\n",
+      "[-57. -70. -53. ...  -5. -10. -20.]\n",
+      "[-57. -70. -53. ...  -5. -10. -20.]\n",
+      "[-57. -70. -53. ...  -5. -10. -20.]\n",
+      "[-57. -70. -53. ...  -5. -10. -20.]\n",
+      "[-57. -70. -53. ...  -5. -10. -20.]\n",
+      "[-57. -70. -53. ...  -5. -10. -20.]\n",
+      "[-57. -70. -53. ...  -5. -10. -20.]\n",
+      "[-57. -70. -53. ...  -5. -10. -20.]\n",
+      "[-57. -70. -53. ...  -5. -10. -20.]\n",
+      "[-57. -70. -53. ...  -5. -10. -20.]\n",
+      "[-57. -70. -53. ...  -5. -10. -20.]\n",
+      "[-57. -70. -53. ...  -5. -10. -20.]\n",
+      "[-57. -70. -53. ...  -5. -10. -20.]\n",
+      "[-57. -70. -53. ...  -5. -10. -20.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 5/5913 [00:00<19:12,  5.12it/s]\n"
      ]
     }
    ],
    "source": [
-    "extract_waves = PTWaveDetection()\n",
-    "resampling = Resampling()\n",
+    "\n",
     "\n",
     "DATA_PATH = './data/A/formatted/'\n",
     "\n",
@@ -122,9 +280,9 @@
     "    \n",
     "    rpeaks = meta['rpeaks'][0]\n",
     "    \n",
-    "    #data = resampling.upsample(data[:,0],2)\n",
+    "    #data_p = resampling.upsample(data[:,0],2)\n",
     "    \n",
-    "    twaves,pwaves = extract_waves.run(data[0,:],rpeaks)\n",
+    "    twaves,pwaves = extract_waves.run(data[:,0].astype(np.float32),rpeaks)\n",
     "    #data_p = extract_waves.run(data[:,0],rpeaks)\n",
     "    \n",
     "    j+=1\n",
@@ -145,7 +303,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 1, 12, 11, ...,  7, -2, -3], dtype=int16)"
+       "array([ 1, -3, -5,  1,  2, -4, 20, 44,  6,  6, -5,  0], dtype=int16)"
       ]
      },
      "execution_count": 5,
@@ -154,7 +312,25 @@
     }
    ],
    "source": [
-    "data[:,0]"
+    "data[0,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[:,0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rpeaks"
    ]
   },
   {
